[build-system]
requires = ["setuptools >= 60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bronkhorstControlbm31"
version = "1.5.0"
requires-python = ">= 3.10"
dependencies = ["bronkhorst-propar", "pandas", "matplotlib", "pyqt6"]
authors = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
maintainers = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
description = "tools for communicating with Bronkhorst MFCs with the API for BM31"
readme = {file = "README.MD", content-type = "text/markdown"}
keywords = ["Bronkhorst", "MFCs"]
license = "GPL-3.0"
license-files = ["LICENSE.md"]
classifiers = [
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13"]

[project.scripts]
bronkhorstServer = "bronkhorstControlbm31.bronkhorstServer:multiServer"
bronkhorstMultiServer = "bronkhorstControlbm31.bronkhorstServer:multiServer"
bronkhorstSingleServer = "bronkhorstControlbm31.bronkhorstServer:run"
timePlot = "bronkhorstControlbm31.plotters:timePlot"
barPlot = "bronkhorstControlbm31.plotters:barPlot"
mfcPlotAll = "bronkhorstControlbm31.plotters:plotAll"
mfcgui = "bronkhorstControlbm31.bronkhorstGui:main"
mfclogplotter = "bronkhorstControlbm31.plotters:logPlotter"

[project.gui-scripts]
mfcgui2 = "bronkhorstControlbm31.bronkhorstGui:main"
mfcmultigui = "bronkhorstControlbm31.bronkhorstMultiGui:main"

[tool.setuptools]
include-package-data = true
packages = ["bronkhorstControlbm31"]
package-data = {"images"=["drawing.ico","drawing.png"]}

[project.urls]
repository = "https://github.com/msujas/bronkhorstControl"
